# graphos

./: .gitignore  Cargo.toml  README.md  deploy.sh  graphos-lehrbuch.typ  rust-toolchain.toml
.cargo/: config.toml
configs/qemu/: deploy.sh
crates/graphos-ai/: Cargo.toml
crates/graphos-ai/src/: demo.rs  engine.rs  gguf.rs  lib.rs  math.rs  sampler.rs  tensor.rs  tokenizer.rs  transformer.rs
crates/graphos-alloc/: Cargo.toml
crates/graphos-boot/: Cargo.toml
crates/graphos-boot/src/: main.rs
crates/graphos-cas/: Cargo.toml
crates/graphos-cas/src/: content_id.rs  error.rs  hash.rs  lib.rs  store.rs
crates/graphos-core/: Cargo.toml
crates/graphos-core/src/: capability.rs  edge.rs  graph_pool.rs  hash.rs  lib.rs  node.rs  node_id.rs
crates/graphos-hal/: Cargo.toml
crates/graphos-hotswap/: Cargo.toml
crates/graphos-hotswap/src/: cache.rs  epoch.rs  error.rs  lib.rs  swap.rs
crates/graphos-ipc/: Cargo.toml
crates/graphos-ipc/src/: channel.rs  error.rs  lib.rs  mailbox.rs  message.rs
crates/graphos-kernel/: Cargo.toml
crates/graphos-kernel/src/: main.rs
crates/graphos-mm/: Cargo.toml
crates/graphos-mm/src/: addr.rs  buddy.rs  frame.rs  lib.rs  page_table.rs
crates/graphos-pager/: Cargo.toml
crates/graphos-pager/src/: bfs_queue.rs  evictor.rs  lib.rs  node_page.rs  pager.rs  prefetch.rs  residency.rs  swap_table.rs  working_set.rs
crates/graphos-persist/: Cargo.toml
crates/graphos-persist/src/: block.rs  error.rs  header.rs  (+2 more)
crates/graphos-shell/: Cargo.toml
crates/graphos-snapshot/: Cargo.toml
crates/graphos-vector/: Cargo.toml
(+19 files in other folders)
